правлен user-microservice

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:3.11-slim AS backend
+FROM python:3.11-slim AS user_microservice
 
 WORKDIR /app
 
-COPY pyproject.toml poetry.lock* /app/
+COPY user_microservice/pyproject.toml poetry.lock* /app/
 
 COPY deploy/configs /app/deploy/configs 
 
@@ -10,7 +10,7 @@ RUN pip install poetry
 
 RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi --no-root
 
-COPY user-microserver/src /app/src
+COPY user_microservice/src /app/user_microservice/src
 
-CMD ["uvicorn", "src.main.web:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "user_microservice.src.main.web:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
