--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ../src:/app/src:ro
+      - ../user_microservice/src:/app/user_microservice/src:ro
   database:
     image: postgres:15.2
     restart: always
