--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       POSTGRES_DB: postgres
     ports:
       - "5433:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -33,3 +35,5 @@ services:
       - "5050:80"
     depends_on:
       - database
+volumes:
+  pgdata:
