--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       dockerfile: ./deploy/Dockerfile.user_microservice
     environment:
       CONFIG_PATH: /app/configs/config.toml
-        - HOST=${HOST}
-        - PORT=${PORT}
-        - POSTGRES_USER=${POSTGRES_USER}
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-        - POSTGRES_DB=${POSTGRES_DB}
+      HOST: ${HOST}
+      PORT: ${PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "8000:8000"
     volumes:
@@ -40,5 +40,8 @@ services:
       - "5050:80"
     depends_on:
       - database
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
 volumes:
   pgdata:
+  pgadmin_data:
