--- a/task_microservice/alembic.ini
+++ b/task_microservice/alembic.ini
@@ -5,7 +5,7 @@
 # this is typically a path given in POSIX (e.g. forward slashes)
 # format, relative to the token %(here)s which refers to the location of this
 # ini file
-script_location = user_microservice/infra/postgres/migrations
+script_location = %(here)s/infra/postgres/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -84,8 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = 
-file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
