--- a/task_microservice/alembic.ini
+++ b/task_microservice/alembic.ini
@@ -85,6 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 sqlalchemy.url =
+file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s
 
 
 [post_write_hooks]
