--- a/deploy/Dockerfile.task_microservice
+++ b/deploy/Dockerfile.task_microservice
@@ -12,4 +12,4 @@ RUN poetry config virtualenvs.create false && poetry install --no-interaction --
 
 COPY task_microservice /app/task_microservice
 
-CMD ["uvicorn", "user_microservice.main.web:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "task_microservice.main.web:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
