добавлен провайдер rabbitmq в task_microservice

--- a/deploy/configs/excemple.config.toml
+++ b/deploy/configs/excemple.config.toml
@@ -9,3 +9,12 @@ port=5432
 username='postgres'
 password='postgres'
 database='postgres'
+
+[rabbitmq]
+user = 'rabbitmq'
+password = 'rabbitmq'
+vhost = '/'
+port = 5672
+host = 'rabbitmq'
+
+
