--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     restart: unless-stopped
     volumes:
-      - ./registration/Migrations:/app/registration/Migrations
+      - ../registration/Migrations:/app/registration/Migrations:rw
 
   rabbitmq:
     image: rabbitmq:3.9-management
