--- a/deploy/Dockerfile.registration
+++ b/deploy/Dockerfile.registration
@@ -1,5 +1,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0
 
+
+RUN apt-get update && apt-get install -y iproute2 iptables && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y iperf3
 WORKDIR /app
 
 COPY registration/*.csproj ./registration/
@@ -16,4 +19,6 @@ WORKDIR /app/publish
 EXPOSE 5000
 EXPOSE 7000
 
-ENTRYPOINT ["dotnet", "registration.dll"]
+COPY deploy/entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+ENTRYPOINT ["/app/entrypoint.sh"]
