--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -12,21 +12,34 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    cap_add:
+      - NET_ADMIN
+    networks:
+      app_network:
+        ipv4_address: 172.20.0.10
     ports:
       - "8000:8000"
     volumes:
       - ../user_microservice:/app/user_microservice:ro
       - ../user_microservice/infra/postgres/migrations/versions:/app/user_microservice/infra/postgres/migrations/versions:rw
+    labels:
+      - "tier=backend"
+      - "app=user_microservice"
 
   database:
     image: postgres:15.2
     restart: always
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5433:5432"
+    networks:
+      app_network:
+        ipv4_address: 172.20.0.20
+        aliases:
+          - dbhost
     volumes:
       - pgdata:/var/lib/postgresql/data
 
@@ -40,6 +53,11 @@ services:
       - "5050:80"
     depends_on:
       - database
+    networks:
+      app_network:
+        ipv4_address: 172.20.0.5
+        aliases:
+          - dbhost
     volumes:
       - pgadmin_data:/var/lib/pgadmin
 
@@ -61,28 +79,30 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    restart: unless-stopped
+    restart: always
+    networks:
+      app_network:
+        ipv4_address: 172.20.0.40
     volumes:
       - ../registration/Migrations:/app/registration/Migrations:rw
-
-  rabbitmq:
-    image: rabbitmq:3.9-management
-    restart: always
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: rabbitmq
-      RABBITMQ_DEFAULT_PASS: rabbitmq
-      RABBITMQ_DEFAULT_VHOST: /
-    volumes:
-        - rabbitmq_data:/var/lib/rabbitmq
-        - rabbitmq_conf:/etc/rabbitmq
-
+    cap_add:
+      - NET_ADMIN
+    labels:
+      - "tier=backend"
+      - "app=registration-api"
 
 
 volumes:
   pgdata:
   pgadmin_data:
-  rabbitmq_data:
-  rabbitmq_conf:
+
+networks:
+  app_network:
+    external: true
+    driver: bridge
+    labels:
+      env: dev
+      project: my_app
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
